a few UI fixes.

--- a/WineCellar/WebContent/styles/main.css
+++ b/WineCellar/WebContent/styles/main.css
@@ -371,7 +371,7 @@ img.bottleImg:hover{
 	cursor: pointer;
 }
 
-#purchaseDetailForm {
+#purchaseDetailForm, #tastingNoteForm {
 	text-align: right;
 }
 
