Added a WineSummary template using Handlebars.js. The page now displays WineSummaries using the template. This was to investigate the utility of using such a tool.

--- a/WineCellar/WebContent/styles/main.css
+++ b/WineCellar/WebContent/styles/main.css
@@ -147,11 +147,11 @@ ul.results li:hover{
 	cursor: default;
 }
 
-.red{
+.red, .Red, .RED{
 	color: #9E0F3D;
 }
 
-.white{
+.white, .White, .WHITE{
 	color: gray;
 }
 
