--- a/WineCellar/WebContent/templates/css/template.less
+++ b/WineCellar/WebContent/templates/css/template.less
@@ -1,6 +1,12 @@
+@import "/styles/reset.css";
+
 @cream: #FFFFC1;
 @brown: #95663F;
 @darkred: #610210;
 @darkblue: #1D2326;
 @gray: #6A6A61;
 @typered: #A5071F;
+
+.clear{
+	clear:both;
+}
