added some basic purcahse details

--- a/WineCellar/WebContent/styles/mobile.css
+++ b/WineCellar/WebContent/styles/mobile.css
@@ -10,8 +10,6 @@
 	float:right;
 }
 
-.ui-content .ui-listview
-    {
-        margin-top: 5px !important;
-        margin-bottom: 5px !important;
-    } 
+#buttonDiv{
+	padding-bottom: 1.2em;
+}
