--- a/WineCellar/WebContent/templates/m_WineDetail.html
+++ b/WineCellar/WebContent/templates/m_WineDetail.html
@@ -6,6 +6,7 @@
 		<span class="vinetageYear">&nbsp;({{vintageYear}})</span>
 	{{/if}}	
 </h2>
+<p class="brand">{{brand.brandName}}</p>
 
 <p class="{{varietal.type}}">
 	<span class="varietal" varietalId="{{varietal.varietalId}}">{{varietal.varietal}}</span><span class="varietalType">&nbsp;({{varietal.type}})</span>
