--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -1,6 +1,6 @@
 <li wineid="{{wineId}}"> 
 	<a href="{{detailPage}}" data-transition="slide">	
-		<img src="/getImage?wineId={{wineId}}" class="floatLeft" />
+		<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 		<p>
 			<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
 			<span class='vintageYear'> ({{vintageYear}})</span>
