added tasting notes to mobile

--- a/WineCellar/WebContent/templates/css/m_WineDetail.less
+++ b/WineCellar/WebContent/templates/css/m_WineDetail.less
@@ -1,4 +1,6 @@
 @import "/templates/css/template.less";
+@import "/templates/css/m_WinePurcahseDetail.less";
+@import "/templates/css/m_TastingNote.less";
 
 img.bottleImg{
 	float:right;
