--- a/WineCellar/WebContent/templates/m_WineDetail.html
+++ b/WineCellar/WebContent/templates/m_WineDetail.html
@@ -22,15 +22,15 @@
 {{/if}}
 
 <p class="rating maxRating">
-	Max Rating:&nbsp;{{rating maxRating}}
+	Max Rating:&nbsp;{{formatRating maxRating}}
 </p>
 
 <p class="rating minRating">
-	Max Rating:&nbsp;{{rating minRating}}
+	Max Rating:&nbsp;{{formatRating minRating}}
 </p>
 
 <p class="rating avgRating">
-	Avg Rating:&nbsp;{{rating avgRating}}
+	Avg Rating:&nbsp;{{formatRating avgRating}}
 </p>
 
 <p>
