--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -20,7 +20,7 @@
 			Avg. Price: <span class='price avgPrice'>{{avgPrice}}</span> / <span class='priceUnit'>{{pricePer}}</span>
 		</p>
 		<p>List Price: </p>
-		<p>Avg Rating: {{avgRating}}</p>
+		<p>Avg Rating: {{formatRating avgRating}}</p>
 		<p>
 			Bottles On Hand: <span class='inventory'>{{qtyOnHand}}</span>
 		</p>
