added date to mobile wine details

--- a/WineCellar/WebContent/templates/m_PurchaseDetails.html
+++ b/WineCellar/WebContent/templates/m_PurchaseDetails.html
@@ -1,6 +1,10 @@
 {{#if purchaseDetails}}
 	{{#each purchaseDetails}}
 		<li purchaseId="{{purchaseId}}">			
+			<p class="date">
+				{{purchaseDate}}
+			</p>
+			
 			<p>
 				<span class="price" >{{money price}}</span> / {{pricePer}} 		
 			</p>
