--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -19,7 +19,7 @@
 		<p>
 			Avg. Price: <span class='price avgPrice'>{{avgPrice}}</span> / <span class='priceUnit'>{{pricePer}}</span>
 		</p>
-		<p>List Price: </p>
+		<p>List Price: {{money listPrice}}</p>
 		<p>Avg Rating: {{formatRating avgRating}}</p>
 		<p>
 			Bottles On Hand: <span class='inventory'>{{qtyOnHand}}</span>
