some new templates, added a "backbone" folder for some testing of Backbone.js

--- a/WineCellar/WebContent/templates/m_WineDetail.html
+++ b/WineCellar/WebContent/templates/m_WineDetail.html
@@ -41,7 +41,7 @@
 	List Price:&nbsp;{{money listPrice}}
 </p>
 
-<p>
+<p class="{{checkInventory qtyOnHand}}">
 	Bottles On Hand:&nbsp;<span class="inventory">{{qtyOnHand}}</span>
 </p>
 
