--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -21,7 +21,7 @@
 		</p>
 		<p>List Price: {{money listPrice}}</p>
 		<p>Avg Rating: {{formatRating avgRating}}</p>
-		<p>
+		<p class="{{checkInventory qtyOnHand}}">
 			Bottles On Hand: <span class='inventory'>{{qtyOnHand}}</span>
 		</p>
 	</a>
