some experimental Backbone stuff

--- a/WineCellar/WebContent/templates/m_WineDetail.html
+++ b/WineCellar/WebContent/templates/m_WineDetail.html
@@ -1,4 +1,4 @@
-<img class="bottleImg" alt="bottle" wineId="{{wineId}}" src="getImage?wineId={{wineId}}" />
+<img class="bottleImg" alt="bottle" wineId="{{wineId}}" src="/getImage?wineId={{wineId}}" />
 
 <h2>
 	<span class="vineyard" vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
