--- a/WineCellar/WebContent/templates/WineSummary.html
+++ b/WineCellar/WebContent/templates/WineSummary.html
@@ -1,25 +1,28 @@
-<li wineid="{{wineId}}"> 
-	<p>
-		<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
-		<span class='vintageYear'> ({{vintageYear}})</span>
-	</p>
-	<p>
-		<span class="brand">{{brand.brandName}}</span>
-	</p>
-	<p class='{{varietal.type}}'>
-		 <span class='varietal' varietalId='{{varietal.varietalId}}'>{{varietal.varietal}} 
-		 	<span class='varietalType'> ({{varietal.type}})</span>
-		 </span> 
-	</p>
-	<p>
-		{{region.region}}
-	</p>					
-	<p>
-		Avg. Price: <span class='price avgPrice'>{{money avgPrice}}</span> / <span class='priceUnit'>{{pricePer}}</span>
-	</p>
-	<p>List Price: {{money listPrice}}</p>
-	<p>Avg Rating: {{formatRating avgRating}}</p>
-	<p>
-		Bottles On Hand: <span class='inventory'>{{qtyOnHand}}</span>
-	</p>
-</li>
+<!-- <li wineid="{{wineId}}">  -->
+	<a href="{{detailPage}}" data-transition="slide">	
+		<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
+		<p>
+			<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
+			<span class='vintageYear'> ({{vintageYear}})</span>
+		</p>
+		<p>
+			<span class="brand">{{brand.brandName}}</span>
+		</p>
+		<p class='{{varietal.type}}'>
+			 <span class='varietal' varietalId='{{varietal.varietalId}}'>{{varietal.varietal}} 
+			 	<span class='varietalType'> ({{varietal.type}})</span>
+			 </span> 
+		</p>
+		<p>
+			{{region.region}}
+		</p>					
+		<p>
+			Avg. Price: <span class='price avgPrice'>{{avgPrice}}</span> / <span class='priceUnit'>{{pricePer}}</span>
+		</p>
+		<p>List Price: {{money listPrice}}</p>
+		<p>Avg Rating: {{formatRating avgRating}}</p>
+		<p class="{{checkInventory qtyOnHand}}">
+			Bottles On Hand: <span class='inventory'>{{qtyOnHand}}</span>
+		</p>
+	</a>
+<!-- </li> -->
