a few updates to the Views.

--- a/WineCellar/WebContent/templates/WineSummary.html
+++ b/WineCellar/WebContent/templates/WineSummary.html
@@ -1,5 +1,5 @@
 <!-- <li wineid="{{wineId}}">  -->
-	<a href="{{detailPage}}" data-transition="slide">	
+	<a href="#wineId-{{wineId}}" data-transition="slide">	
 		<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 		<p>
 			<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
