--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -1,4 +1,4 @@
-<!-- <li wineid="{{wineId}}">  balls-->
+<!-- <li wineid="{{wineId}}">  -->
 	<a href="{{detailPage}}" data-transition="slide">	
 		<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 		<p>
