added a brand select field using templates as a test

--- a/WineCellar/WebContent/css/main.css
+++ b/WineCellar/WebContent/css/main.css
@@ -10,369 +10,12 @@
 	border: 1px solid black;
 }
 
-.border.px2{
-	border-width: 2px;
-}
-
-.border.red{
-	border-color: red;
-}
-
-.border.blue{
-	border-color: red;
-}
-
-.border.dotted{
-	border-style: dotted;
-}
-
-.border.dashed{
-	border-style: dashed;
-}
-
-.clearfix:after {
-	content: ".";
-	display: block;
-	clear: both;
-	visibility: hidden;
-	line-height: 0;
-	height: 0;
-}
- 
-.clearfix {
-	display: inline-block;
-}
-
-.clear{
-	clear:both;
-}
-
-body{
-	background-image: url(/images/backgrounds/gray-paper.png);
-	text-shadow: 1px 1px rgba(255, 255, 255, .7);
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin:0px;
-}
-
-p{
-	padding: 0;
-	margin: 0;	
-}
-
-legend{
-	font-weight: bold;
-}
-
-#header{
-	position: absolute;
-	width: 100%;
-	height: 4em;	
-	box-sizing: border-box;
-}
-
-#main{
-	position: absolute;
-	width: 100%;
-	top: 4em;
-	bottom: 0em;
-	box-sizing: border-box;
-}
-
-#footer{
-	position: absolute;
-	width: 100%;
-	bottom: 0px;
-	height: 0em;
-	box-sizing: border-box;
-	
-	text-align: right;
-}
-
-#vineyard, #varietal, #wine, #wineDetail{
-	display: none;
-}
-
-#title{
-	background-image: linear-gradient(top, #E3146E 0%, #780B07 100%);
-	text-align: center;
-	border-radius: 10px;
-	color: white;
-	text-shadow: 1px 1px rgba(0, 0, 0, .7);
-	padding: 10px;
-	position: relative;
-}
-
-h1, h2, h3, h4, h5{
-	padding: 5px;
-	margin: 0px;
-}
-
-#wineDetails h1, h2, h3, h4, h5{
-	text-align: center;
-	padding: 0px;
-	font-weight: normal;
-}
-
-div.main{
-	float: left;
-	width:300;
-}
-
-div.results{
-	width: 100%; 
-}
-
-ul.results, ul.tastingNotes, ul.purchaseDetails{
-	list-style: none;
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 0px 0px;
-}
-
-ul.results p, .wineSummary p{
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 0px 0px;
-}
-
-ul.results li{
-	margin-bottom: 0px;
-	padding: 5px 5px 5px 5px;
-}
-
-ul.results li:hover{
-	/* background: lightskyblue; */
-	cursor: default;
-}
-
-.red, .Red, .RED{
-	color: #9E0F3D;
-}
-
-.white, .White, .WHITE{
-	color: gray;
-}
-
-span.brand{
-	font-style: italic;
-}
-
-span.date{
-	font-weight: bold;
-}
-
-span.vineyard{
-	font-weight: bold;
-	font-size: 1.1em;
-}
-
-p.message{
-	text-align: center;
-}
-
-#wineDetails{
-	position: relative;
-	top: 25px;
-	width: 400px;
-	min-height: 50px;
-	float: left;
-	padding: 0px;
-}
-
-#wineDetails div.wineSummary{
-	text-align: center;
-	margin-left: 10px;
-	margin-right: 10px;
-	border-bottom: 3px groove red;
-}
-
-#wineDetailPurchases, #wineDetailNotes{
-	float: left;
-	width: 50%;
-	box-sizing: border-box;
-	padding: 0px 10px 0px 10px;
-}
-
-ul.tastingNotes, ul.purchaseDetails{
-	height: 250px;
-	max-height: 300px;
-	overflow: auto;
-}
-
-#wineDetails div:first-of-type{
-	
-}
-
-.inStock{
-	color: green;
-	font-weight: bold;
-}
-
-li.selected, #wineDetails{
-	background: lightgray;
-	margin-right: -5px;
-}
-
-li.selected{
-	font-size: 1.2em;
-}
-
 #wineSummaries{
-	max-height: 100%;
-	position: relative;
-	overflow: auto;
-	width: 275px;
+	width: 400px;
 	float: left;
 }
 
-#wineSummaries li{
-	font-size: 1em;
-	transition: all .1s;
-}
-
-.hover{
-	background: lightskyblue; 
-}
-
-#wineSummaries li:not(.selected).hover{
-	/* font-size: 1.2em; */
-}
-
-#wineSummaries li:hover{
-	cursor: pointer;
-}
-
-#wineDetails ul{
-	border: 0px solid black;
-	padding-right: 5px;
-	margin: 2px;
-	max-height: 300px;
-	overflow: auto;
-	overflow-scrolling:touch;
-}
-
-#wineDetails ul li:first-child{
-	border: 0px;
-}
-
-#wineDetailNotes h3, #wineDetailPurchases h3{
-	font-weight: bold;
-}
-
-ul.purchaseDetails li, ul.tastingNotes li{
-	padding: 5px;
-	border-left: 0px solid black;
-	border-right: 0px solid black;
-	border-top: 1px dotted black;
-}
-
-
-
-.purchaseDetails li p, .tastingNotes li p{
-	margin:0;
-	padding: 0;
-}
-
-button.backButton, button.editButton{
-	margin:7px;
-}
-
-#wineDetails button.backButton{
+#components{
+	width: 300px;
 	float: left;
 }
-
-#wineDetails button.editButton{
-	float: right;
-}
-
-#wineDetails div.header{
-	height: 3.5em;
-	background-image: linear-gradient(top, #E3146E 0%, #780B07 100%);
-	
-}
-
-#wineDetails div.content{
-	padding: 15px;
-}
-
-#wine div ul li:hover{
-	cursor: pointer !important;
-}
-
-#navigation{
-	float: left;
-	width: 260px;
-	margin-right: 5px;
-}
-
-#navigation fieldset{
-	background: white;
-}
-
-#search select{
-	width: 100%;
-	margin-bottom: 10px;
-}
-
-#search label.bold{
-	font-weight: bold;
-}
-
-fieldset{
-	padding: 5px;
-	margin: 0px;
-}
-
-#stats p{
-	font-weight: bold;
-	position: relative;
-	margin-bottom: 3px;
-	border-bottom: 1px dotted black;
-}
-
-#stats p span{
-	font-weight: normal;
-	position: absolute;
-	right: 2px
-}
-
-#toolbar{
-	text-align: center;
-}
-
-img.bottleImg{
-	float: right;
-	margin-bottom: 5px;
-	max-height: 200px;
-	max-widgh: 200px;
-}
-
-#lightbox{
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background: rgba(0,0,0,.8);
-	text-align: center;
-	display: none;
-	color: white;
-	text-shadow: 0px 0px;
-}
-
-#lightbox img{
-	max-height: 100%;
-	max-width: 100%;
-	float: none;
-	margin-top: 10em;
-}
-
-img.bottleImg:hover{
-	cursor: pointer;
-}
-
-#purchaseDetailForm, #tastingNoteForm {
-	text-align: right;
-}
-
-
