--- a/WineCellar/WebContent/templates/WineApp.html
+++ b/WineCellar/WebContent/templates/WineApp.html
@@ -1,1 +1,4 @@
 <ul id="wineSummaries"></ul>
+<div id="components">
+	<label for="select_brands">Brands: </label><select class="select_brands" id="select_brands"></select>
+</div>
