--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -2,19 +2,19 @@
 	<a href="{{detailPage}}" data-transition="slide">	
 		<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 		<p>
-			<span class='vineyard' vineyardId="{{vineyardId.vineyardId}}">{{vineyardId.vineyard}}</span>
+			<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
 			<span class='vintageYear'> ({{vintageYear}})</span>
 		</p>
 		<p>
-			<span class="brand">{{brandId.brandName}}</span>
+			<span class="brand">{{brand.brandName}}</span>
 		</p>
 		<p class='{{varietal.type}}'>
-			 <span class='varietal' varietalId='{{varietal.varietalId}}'>{{varietalId.varietal}} 
-			 	<span class='varietalType'> ({{varietalId.type}})</span>
+			 <span class='varietal' varietalId='{{varietal.varietalId}}'>{{varietal.varietal}} 
+			 	<span class='varietalType'> ({{varietal.type}})</span>
 			 </span> 
 		</p>
 		<p>
-			{{regionId.region}}
+			{{region.region}}
 		</p>					
 		<p>
 			Avg. Price: <span class='price avgPrice'>{{avgPrice}}</span> / <span class='priceUnit'>{{pricePer}}</span>
