--- a/WineCellar/WebContent/templates/WineApp.html
+++ b/WineCellar/WebContent/templates/WineApp.html
@@ -1,4 +1,5 @@
 <ul id="wineSummaries"></ul>
 <div id="components">
 	<label for="select_brands">Brands: </label><select class="select_brands" id="select_brands"></select>
+	<label for="select_vineyards">Vineyards: </label><select class="select_vineyards" id="select_vineyards"></select>
 </div>
