--- a/WineCellar/WebContent/templates/WineApp.html
+++ b/WineCellar/WebContent/templates/WineApp.html
@@ -1,5 +1,15 @@
-<ul id="wineSummaries"></ul>
 <div id="components">
-	<label for="select_brands">Brands: </label><select class="select_brands" id="select_brands"></select>
-	<label for="select_vineyards">Vineyards: </label><select class="select_vineyards" id="select_vineyards"></select>
+	<label for="select_brands">Brands: </label><br/>
+	<select class="select_brands" id="select_brands"></select><br/>
+	
+	<label for="select_vineyards">Vineyards: </label><br/>
+	<select class="select_vineyards" id="select_vineyards"></select><br/>
+	
+	<label for="select_varietals">Varietals:</label><br/>
+	<select class="select_varietals" id="select_varietals"></select><br/>
+	
+	<label for="select_regions">Regions:</label><br/>
+	<select class="select_regions" id="select_regions"></select><br/>
 </div>
+<h1 class="msg_loading">Loading Models... Please wait</h1>
+<ul id="wineSummaries"></ul>
