--- a/WineCellar/WebContent/templates/select_brands.html
+++ b/WineCellar/WebContent/templates/select_brands.html
@@ -1,3 +1,3 @@
-{{#each brands}}
-<option value="{{this.brandId}}">{{this.brandName}}</option>
+{{#each this}}
+	<option value="{{this.brandId}}">{{this.brandName}}</option>
 {{/each}}
