added #ref and IDs to each wineSummray element.

--- a/WineCellar/WebContent/templates/m_WineSummary.html
+++ b/WineCellar/WebContent/templates/m_WineSummary.html
@@ -1,4 +1,4 @@
-<a href="#{{wineId}}" data-transition="slide">	
+<a href="#wineSummary{{wineId}}" data-transition="slide">	
 	<!-- <img src="/getImage?wineId={{wineId}}" class="floatLeft" /> -->
 	<p>
 		<span class='vineyard' vineyardId="{{vineyard.vineyardId}}">{{vineyard.vineyard}}</span>
