Re-organized and cleaned up some files in the project.

--- a/WineCellar/WebContent/templates/PurchaseDetails.html
+++ b/WineCellar/WebContent/templates/PurchaseDetails.html
@@ -1,6 +1,6 @@
 {{#if purchaseDetails}}
 	{{#each purchaseDetails}}
-		<li purchaseId="{{purchaseId}}">			
+		<li data-purchaseId="{{purchaseId}}">			
 			<p class="date">
 				{{purchaseDate}}
 			</p>
