--- a/WineCellar/WebContent/templates/css/WineSummary.less
+++ b/WineCellar/WebContent/templates/css/WineSummary.less
@@ -1,4 +1,4 @@
-@import "/templates/css/template.less";
+@import "/templates/css/common.less";
 
 .vineyard{
 	font-weight:bold;
@@ -12,4 +12,9 @@
 
 img.ui-li-thumb{
 	margin-left: 15px;
+}
+
+a.wineSummary{
+	text-decoration: none;
+	color: black;
 }
