--- a/WineCellar/WebContent/templates/select_regions.html
+++ b/WineCellar/WebContent/templates/select_regions.html
@@ -1,5 +1,5 @@
 {{#each this}}
-	<option value={{this.regionId}}>
+	<option value={{this.regionId}} data-regionId="this.regionId">
 		{{this.region}}
 		{{#if this.subRegion}}
 			- {{this.subRegion}}
