--- a/WineCellar/WebContent/templates/select_varietals.html
+++ b/WineCellar/WebContent/templates/select_varietals.html
@@ -1,3 +1,3 @@
 {{#each this}}
-	<option value="{{this.varietalId}}">{{this.varietal}}</option>
+	<option value="{{this.varietalId}}" data-varietalId="{{this.varietalId}}">{{this.varietal}}</option>
 {{/each}}
