--- a/WineCellar/WebContent/templates/select_vineyards.html
+++ b/WineCellar/WebContent/templates/select_vineyards.html
@@ -1,3 +1,3 @@
 {{#each this}}
-	<option value="{{this.vineyardId}}">{{this.vineyard}}</option>
+	<option value="{{this.vineyardId}}" data-vineyardId="{{this.vineyardId}}">{{this.vineyard}}</option>
 {{/each}}
