--- a/WineCellar/WebContent/templates/css/template_styles.less
+++ b/WineCellar/WebContent/templates/css/template_styles.less
@@ -4,3 +4,4 @@
 @import "/templates/css/reset.css"; 
 @import "/templates/css/WineSummary.less";
 @import "/templates/css/WineDetail.less";
+@import "/templates/css/WineApp.less";
