--- a/WineCellar/WebContent/templates/WineDetail.html
+++ b/WineCellar/WebContent/templates/WineDetail.html
@@ -46,3 +46,9 @@
 </p>
 
 <br class="clear"/>
+<h3>Purchases</h3>
+<ul class="purchaseList"></ul><hr/>
+
+<h3>Tastings</h3>
+<ul class="tastingNoteList" ></ul>
+
