--- a/WineCellar/WebContent/templates/css/WineApp.less
+++ b/WineCellar/WebContent/templates/css/WineApp.less
@@ -27,5 +27,15 @@ select {
 	float: left;
 	width: 400px;
 	border: 1px solid black;
-	height: 600px;
+	padding: 5px;
+	margin: 5px;
+	
+	h2{
+		font-size: 1.4em;
+		font-weight: bold;
+	}
+	h3{
+		font-size: 1.2em;
+		font-weight: bold;
+	}
 }
