--- a/WineCellar/WebContent/templates/TastingNoteList.html
+++ b/WineCellar/WebContent/templates/TastingNoteList.html
@@ -1,5 +1,5 @@
-{{#if tastingNotes}}
-	{{#each tastingNotes}}
+{{#if this}}
+	{{#each this}}
 	<li>
 		<p class="date">{{tastingDate}}</p>
 		<p class="rating">Rating:&nbsp;{{formatRating rating}}</p>
