added a javax to Lib. updated gitignore files

--- a/WineCellar/WebContent/templates/WineApp.html
+++ b/WineCellar/WebContent/templates/WineApp.html
@@ -1,5 +1,6 @@
 <div id="components">
-	<label for="select_brands">Brands: </label><br/>
+	<span></span>
+    <label for="select_brands">Brands: </label><br/>
 	<select class="select_brands" id="select_brands"></select><br/>
 	
 	<label for="select_vineyards">Vineyards: </label><br/>
@@ -11,6 +12,6 @@
 	<label for="select_regions">Regions:</label><br/>
 	<select class="select_regions" id="select_regions"></select><br/>
 </div>
-<h1 class="msg_loading">Loading Models... Please wait</h1>
+<h2 class="msg_loading">Loading Models... Please wait</h2>
 <ul id="wineSummaries"></ul>
 <div id="wineDetail"></div>
