--- a/WineCellar/WebContent/templates/css/WineApp.less
+++ b/WineCellar/WebContent/templates/css/WineApp.less
@@ -24,7 +24,9 @@ select {
 }
 
 #wineDetail{
-	float: left;
+    position: fixed;
+    left: 655px;
+    top: 30px;
 	width: 400px;
 	border: 1px solid black;
 	padding: 5px;
